twitter auth (frontend)

--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,7 @@
   <link href="lib/ionic/css/ionic.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 
+  <script src="lib/jsSHA/src/sha1.js"></script>
   <script src="lib/ionic/js/ionic.bundle.min.js"></script>
   <script src="lib/angular-local-storage/dist/angular-local-storage.min.js"></script>
   <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
